--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "mocha": "~1.17.0",
     "should": "~3.1.0",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "optional": "~0.1.0-2"
   },
   "engines": {
     "node": ">=0.10.25"
