--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter's REST API Lite",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "start": "./node_modules/.bin/gulp",
+    "test": "./node_modules/.bin/gulp test"
   },
   "keywords": [
     "twitter",
@@ -21,10 +22,16 @@
     "request": "~2.33.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.0",
-    "should": "~3.1.0",
     "express": "~3.4.8",
-    "optional": "~0.1.0-2"
+    "gulp": "^3.8.6",
+    "gulp-clean": "^0.3.1",
+    "gulp-docco": "0.0.4",
+    "gulp-gh-pages": "^0.3.3",
+    "gulp-mocha": "^0.5.0",
+    "gulp-subtree": "^0.1.0",
+    "mocha": "~1.17.0",
+    "optional": "~0.1.0-2",
+    "should": "~3.1.0"
   },
   "engines": {
     "node": ">=0.10.25"
