--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "express": "~3.4.8",
     "gulp": "^3.8.6",
+    "gulp-coverage": "^0.1.24",
     "gulp-docco": "0.0.4",
     "gulp-gh-pages": "^0.3.3",
     "gulp-mocha": "^0.5.0",
